kubernetes/apps/storage/rustfs/app/httproute-console.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-console
spec:
  hostnames:
    - "rustfs.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rustfs-svc
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /
